# SympleAstroFocus

./: .gitignore  LICENSE  README.md  release.py
ASCOM/: ASCOM.sln
ASCOM/ASCOM/: ASCOM.csproj  Driver.cs  SetupDialogForm.cs  SetupDialogForm.designer.cs  SympleAstroFocus Setup.iss  SympleAstroFocus Test.js  SympleAstroFocusConstants.cs  SymplerAFReadMe.htm  packages.config
ASCOM/ASCOM/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ASCOM/ASCOMTestGui/: ASCOMTestGui.csproj  Form1.Designer.cs  Form1.cs  Program.cs
ASCOM/ASCOMTestGui/Properties/: Resources.Designer.cs  Settings.Designer.cs
ASCOM/testGUI/: Form1.Designer.cs  Form1.cs  Program.cs  testGUI.csproj
ASCOM/testGUI/Properties/: Resources.Designer.cs  Settings.Designer.cs
docs/: usb_protocol.md
driver/: CMakeLists.txt
driver/cli/: saf_cli.cpp
driver/core/: CMakeLists.txt
driver/core/inc/: saf_core.h  sym_defs.h
driver/core/src/: saf_core.cpp
stm32/SympleAstroFocusStepper/: .cproject  .mxproject  .project  STM32F103C8TX_FLASH.ld  SympleAstroFocusStepper Debug.cfg  SympleAstroFocusStepper.ioc
stm32/SympleAstroFocusStepper/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
stm32/SympleAstroFocusStepper/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm32/SympleAstroFocusStepper/Middlewares/SympleFlash/: symple_flash.c  symple_flash.h
stm32/SympleAstroFocusStepper/SympleMotor/: hw_defs.h  hw_defs_manager.c  hw_defs_manager.h  sym_defs.c  sym_defs.h
stm32/SympleAstroFocusStepper/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_custom_hid_if.c  usbd_desc.c
stm32/SympleAstroFocusStepper/tmc/helpers/: API_Header.h  Bits.h  Functions.h  RegisterAccess.h  Types.h
stm32/SympleAstroFocusStepper/tmc/ic/TMC2209/: TMC2209.c  TMC2209.h  TMC2209_Constants.h  TMC2209_Fields.h  TMC2209_Register.h
(+1 files in other folders)
